--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@
   margin: 0 auto;
   position: relative;
   overflow: hidden;
-  background: linear-gradient(#87CEEB, #E0F6FF)
+  background: linear-gradient(#87CEEB, #E0F6FF);
 }
 
 button {
@@ -26,6 +26,30 @@ button {
   top: 50vh;
   cursor: pointer;
   z-index: 1;
+}
+button:hover {
+  border: 2px solid green;
+  background: none;
+  color: green;
+}
+
+.game-over {
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.322);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.game-over h1 {
+  font-size: 3rem;
+  color: red;
+  text-align: center;
+  margin-top: 15rem;
 }
 
 .pipe {
@@ -72,7 +96,7 @@ button {
 }
 
 .jump {
-  animation: jump 800ms ease-out;
+  animation: jump 1500ms ease-out;
 }
 
 @keyframes jump {
@@ -81,15 +105,15 @@ button {
   }
 
   40% {
-    bottom: 180px;
+    bottom: 200px;
   }
 
   50% {
-    bottom: 180px;
+    bottom: 200px;
   }
 
   60% {
-    bottom: 180px;
+    bottom: 200px;
   }
 
   100% {
